datasets/manifests/networking/m105_net_nodeport_5.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-exposed-5
  namespace: app-ns-1
spec:
  type: NodePort
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30004
