datasets/manifests/networking/m111_net_nodeport_11.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-exposed-11
  namespace: app-ns-3
spec:
  type: NodePort
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30010
