datasets/manifests/networking/m117_net_nodeport_17.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-exposed-17
  namespace: app-ns-1
spec:
  type: NodePort
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30016
