datasets/manifests/networking/m123_net_nodeport_23.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-exposed-23
  namespace: app-ns-3
spec:
  type: NodePort
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30022
