datasets/manifests/networking/m129_net_nodeport_29.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-exposed-29
  namespace: app-ns-1
spec:
  type: NodePort
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30028
