datasets/manifests/networking/m103_net_public_ingress_3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-ingress-3
  namespace: app-ns-3
spec:
  rules:
  - host: example3.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
