datasets/manifests/networking/m109_net_public_ingress_9.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-ingress-9
  namespace: app-ns-1
spec:
  rules:
  - host: example9.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
