datasets/manifests/networking/m115_net_public_ingress_15.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-ingress-15
  namespace: app-ns-3
spec:
  rules:
  - host: example15.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
