datasets/manifests/networking/m121_net_public_ingress_21.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-ingress-21
  namespace: app-ns-1
spec:
  rules:
  - host: example21.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
