datasets/manifests/networking/m127_net_public_ingress_27.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-ingress-27
  namespace: app-ns-3
spec:
  rules:
  - host: example27.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
