datasets/manifests/networking/m101_net_allow_all_ingress_1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-1
  namespace: app-ns-1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
