datasets/manifests/networking/m102_net_allow_all_egress_2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-2
  namespace: app-ns-2
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
