datasets/manifests/networking/m106_net_ambiguous_policy_6.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: missing-policy-types-6
  namespace: app-ns-2
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
