datasets/manifests/networking/m107_net_allow_all_ingress_7.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-7
  namespace: app-ns-3
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
