datasets/manifests/networking/m108_net_allow_all_egress_8.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-8
  namespace: app-ns-4
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
