datasets/manifests/networking/m110_net_wildcard_cidr_10.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: broad-ipblock-10
  namespace: app-ns-2
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
