datasets/manifests/networking/m112_net_ambiguous_policy_12.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: missing-policy-types-12
  namespace: app-ns-4
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
