datasets/manifests/networking/m113_net_allow_all_ingress_13.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-13
  namespace: app-ns-1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
