datasets/manifests/networking/m114_net_allow_all_egress_14.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-14
  namespace: app-ns-2
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
