datasets/manifests/networking/m116_net_wildcard_cidr_16.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: broad-ipblock-16
  namespace: app-ns-4
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
