datasets/manifests/networking/m118_net_ambiguous_policy_18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: missing-policy-types-18
  namespace: app-ns-2
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
