datasets/manifests/networking/m119_net_allow_all_ingress_19.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-19
  namespace: app-ns-3
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
