datasets/manifests/networking/m120_net_allow_all_egress_20.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-20
  namespace: app-ns-4
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
