datasets/manifests/networking/m124_net_ambiguous_policy_24.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: missing-policy-types-24
  namespace: app-ns-4
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
