datasets/manifests/networking/m125_net_allow_all_ingress_25.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-25
  namespace: app-ns-1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
