datasets/manifests/networking/m126_net_allow_all_egress_26.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-26
  namespace: app-ns-2
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
