datasets/manifests/networking/m130_net_ambiguous_policy_30.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: missing-policy-types-30
  namespace: app-ns-2
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
